fixed heading spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ h6 {
   padding: 8px 0;
   margin: 10px 0px;
   font-weight: 400;
-  font-size: 0.6rem;
+  font-size: 0.8rem;
 }
 
 ul li {
